# django-autoslug

./: .gitignore  .hgignore  .hgtags  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  CONTRIBUTING  CONTRIBUTING.rst  MANIFEST  MANIFEST.in  README  README.rst  RELEASE.md  TODO  _version_helper.py  pyproject.toml  renovate.json  requirements-rtfd.txt  run_tests.py  runcover.sh  setup.cfg  setup.py  tox.ini  version.py
.github/workflows/: lint_python.yml  main.yml  tox.yml
autoslug/: __init__.py  fields.py  settings.py  settings.py~  tests.py  utils.py
autoslug/tests/: models.py  tests.py  translations.py
autoslugfield/: __init__.py  fields.py  settings.py
doc/: conf.py  index.rst
docs/: Makefile  conf.py  fields.rst  index.rst  settings.rst
requirements/: basic.txt  devel.txt  docs-manual.txt  docs.txt  l10n.txt  optional.txt  testing.txt
